// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Title /> For a protein should render a title component correctly 1`] = `
<div
  className="title"
  data-testid="titlebar"
>
  <Helmet
    defer={true}
    encodeSpecialCharacters={true}
    prioritizeSeoTags={false}
    titleTemplate="VATB_METVS (A6UP55) -   undefined - InterPro"
  >
    <title>
      InterPro
    </title>
  </Helmet>
  <div
    className="title-name"
  >
    <div
      className="title-fav"
    >
      <h3
        className=""
      >
        VATB_METVS
         
      </h3>
    </div>
    <TitleTag />
  </div>
  <AccessionTag
    accession="A6UP55"
    isIPScanResult={false}
  />
  <FragmentTag
    isFragment={false}
  />
</div>
`;

exports[`<Title /> For a structure should render a title component correctly 1`] = `
<div
  className="title"
  data-testid="titlebar"
>
  <Helmet
    defer={true}
    encodeSpecialCharacters={true}
    prioritizeSeoTags={false}
    titleTemplate="RING-domain heterodimer (1JM7) -   undefined - InterPro"
  >
    <title>
      InterPro
    </title>
  </Helmet>
  <div
    className="title-name"
  >
    <div
      className="title-fav"
    >
      <h3
        className=""
      >
        RING-domain heterodimer
         
      </h3>
    </div>
    <TitleTag
      db="pdb"
      dbLabel="pdb"
    />
  </div>
  <AccessionTag
    accession="1JM7"
    db="pdb"
    isIPScanResult={false}
  />
  <FragmentTag
    isFragment={false}
  />
</div>
`;

exports[`<Title /> For an entry should render a title component correctly 1`] = `
<div
  className="title"
  data-testid="titlebar"
>
  <Helmet
    defer={true}
    encodeSpecialCharacters={true}
    prioritizeSeoTags={false}
    titleTemplate="Piwi domain (PF02171) -   undefined - InterPro"
  >
    <title>
      InterPro
    </title>
  </Helmet>
  <div
    className="title-name"
  >
    <div
      className="title-fav"
    >
      <h3
        className=""
      >
        Piwi domain
         
      </h3>
    </div>
    <TitleTag
      db="pfam"
      dbLabel="pfam"
    />
  </div>
  <AccessionTag
    accession="PF02171"
    db="pfam"
    isIPScanResult={false}
    type="domain"
  />
  <FragmentTag
    isFragment={false}
  />
</div>
`;
